# service

./: .env  Cargo.toml  README.md
graphql_server/: Cargo.toml  README.md
graphql_server/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
graphql_server/migrations/2022-04-22-015009_init/: up.sql
graphql_server/migrations/2022-04-22-015639_chat/: down.sql  up.sql
graphql_server/old/: lib.rs  main.rs  models.rs  utils.rs
graphql_server/old/function/: delete.rs  update.rs
graphql_server/src/: auth.rs  context.rs  endpoints.rs  graphql.rs  lib.rs  main.rs  models.rs  schema.rs  serve.rs
graphql_server/src/models/: mod.rs  schema.rs
juniper_actix/: Cargo.toml
src/: main.rs  schema.rs
src/diesel/: mod.rs
src/function/: insert.rs  query.rs
