[workspace]
members = [
  "juniper_actix",
  "graphql_server",
]

[profile.dev]
# For now this is required because of a bug/limitation in the `inventory` crate:
# https://github.com/dtolnay/inventory/issues/32. Without codegen-units = 1
# enum types can be optimized away and this results in a codegen error.
codegen-units = 1
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
