[package]
name = "graphql_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.6", features = ["postgres", "chrono", "r2d2"] }
r2d2 = "0.8.8"
dotenv = "0.15.0"
juniper = {version = "0.15", features = ["expose-test-schema", "serde_json"]}
juniper_graphql_ws = "0.3"
juniper_subscriptions = "0.16"
juniper_actix = { path = "../juniper_actix", features = ["subscriptions"] }
actix-rt = "2.0.0"
actix-web = "4.0"
env_logger = "=0.8.2"
pretty_env_logger = "0.4"
tokio = {version = "1.8", features = ["macros", "rt", "rt-multi-thread"]}
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.4", features = ["serde", "v4"] }
tokio-stream = {version = "0.1", features = ["sync", "time"]}